css/custom.css
h1, h2, h3 {
	font-family: 'Orbitron', sans-serif;
}

p {
	font-family: 'Open Sans', sans-serif;
}

html{
	position: relative;
	min-height: 100%;
}

body{
	/*margin-top: 80px;*/
	position: relative;
	font-size: 16px;
}

h1{
	text-align: center;
	margin-top: 70px;
	margin-bottom: 50px;
}

h3{
	text-align: center;
}

.btn {
	padding-top: 0.8em;
}

/* Yleiset */

iframe{
	border-style: none;
}

.bg-red {
	background-color: #330000;
	color: white;
}

.bg-trans-white {
	background-color: rgba(255,255,255,0.1);
}

.bg-cogs {
	background-image: url('../img/koneisto_white_land_trans.png');
	background-position: top center;
	background-repeat: no-repeat;
	background-size: 100% auto; /* Fit to width */
}

@media only screen and (max-width: 991px) {
	.bg-cogs {
		background-size: auto 100%; /* Fit to height */
	}
}


.container {
	padding-bottom: 5%;
}

#supernova .container{
	padding-bottom: 1%;
}

.supernova-ostalippuja{
	padding: 15pt 0 10pt 0;
}

#yhdistys{
	font-size: 16px;
}

#tekijat{
	font-size: 12px;
}


.no-pad-bottom {
	padding-bottom: 0;
}

.btn-danger{
	background-color: #640101;
	border-color: #640101;
}

.btn-danger:hover{
	background-color: #330000;
	border-color: 640101;
}

/* Navbar */

.navbar-nav>li>a {
    padding: 30px;
    font-family: 'Orbitron', sans-serif;
}

.nav-lippukauppa-button{
	margin-top: 23px;
}

.navbar-fixed-top .navbar-collapse{
	max-height: 500px;
}


@media(max-width: 767px){
	.nav-lippukauppa-button{
		margin: 0 25px 15px 25px;
	}
}
@media(min-width: 768px ) and (max-width: 991px){
	.nav-lippukauppa-button{
		font-size: 12px;
		margin: 26px 0px 10px 00px;
		padding: 6px 8px;
	}
}

.nav-lippukauppa-link {
	padding: 0 !important;
	margin: 0 !important;
}

/* Header */

.logo-box {
	background: url('../img/halkeilu.png');
	height: 100vh;
}

@media only screen and (max-width: 768px) {
	.logo-box {
		background: url('../img/halkeilu_sq_800.png');
		background-size: 100% auto; /* Fit to width */
	}
}

#logo-background {
	background: url('../img/halkeilu.png');
	width: 100%;
	height: 400px;
	position: absolute;
	z-index: -1;
}

#logo-container {
	padding: 40vh 5% 5% 5%;
}

.arrow-caption {
	font-size: 12pt;
}

.landing-arrow {
	margin-top: 6%;
	font-size: 40pt;
}

.landing-arrow a, a:active {
	color: #640101;
}

.landing-arrow a:hover {
	color: #330000;
}

#landing-arrow {
	-webkit-animation-duration: 1s;
 	-webkit-animation-delay: 0.5s;
 	-moz-animation-duration: 1s;
 	-moz-animation-delay: 0.5s;
 	-ms-animation-duration: 1s;
 	-ms-animation-delay: 0.5s;
 	-o-animation-duration: 1s;
 	-o-animation-delay: 0.5s;
 	animation-duration: 1s;
 	animation-delay: 0.5s;
}

/*
#logo {
	-webkit-animation-duration: 0;
	-moz-animation-duration: 0;
	-ms-animation-duration: 0;
	-o-animation-duration: 0;
 	animation-duration: 0;
}


@media only screen and (min-width: 768px) {
	#logo {
		-webkit-animation-duration: 1s;
	  	-webkit-animation-delay: 0s;
		-moz-animation-duration: 1s;
	  	-moz-animation-delay: 0s;
		-ms-animation-duration: 1s;
	  	-ms-animation-delay: 0s;
		-o-animation-duration: 1s;
	  	-o-animation-delay: 0s;
	 	animation-duration: 1s;
	 	animation-delay: 0s;
	}
}
*/

.supernova-box {
	padding-top: 5%;
	background-image: url('../img/koneisto_white_land_trans.png');
	background-position: top center;
	background-repeat: no-repeat;
	background-size: 100% auto; /* Fit to width */
}

@media only screen and (max-width: 991px) {
	.supernova-box {
		background-size: auto 100%; /* Fit to height */
	}
}

.trans-bg {
	background-color: rgba(51,0,0,0.6);
}

/* Lippukauppa-button */
.btn-lippukauppa, .btn-lippukauppa:hover {
	font-family: 'Orbitron', sans-serif;
/*	color: #330000;
	background: none;
	font-size: 20pt;
	border-color: #330000;*/
}

.btn-lippukauppa:hover {
/*	background-color: #DEDEDE;*/
}

/* Hahmot */


.character-info {
	padding-top: 10%;
}

.character-img {
	max-width: 100%;
}

#hahmot{
	text-align: left;
}


#hahmot .char-right{
	text-align: right;
}

@media(max-width: 991px){
	#hahmot, #hahmot .char-right{
		text-align: center;
	}

	.character-info{
		padding-top: 0;
		padding-bottom: 10%
	}
}

/* Puhelimet */
@media only screen and (max-width: 767px) {
    .character-img {
		width: 200px;
	}
}

/*Tekijat*/

.credit-box{
	background-color: #f5f5f5;
	/*padding-bottom: 50px;*/

}

.tekijat{
	text-align: center;
}

.tekijat ul{
	padding-left: 0;
	list-style: none;
}
@media (min-width: 400px) {
	.tekijat {
		-webkit-column-count: 2;
		-moz-column-count: 2;
		column-count: 2;
	}
}
@media (min-width: 768px) {
	.tekijat {
		-webkit-column-count: 3;
		-moz-column-count: 3;
		column-count: 3;
	}
}
@media (min-width: 1170px) {
	.tekijat{
		-webkit-column-count: 4;
		-moz-column-count: 4;
		column-count: 4;	
	}
}


/* Yhtistyössä*/

.kumppanit img{
	padding: 30px 40px;
	max-width: 100%;
	
}

.kumppanit	{
	text-align: center;
}

.kumppanit h3 {
	margin-top: 80px;
}

/* FOOTER */
footer {
  width: 100%;
  background-color: #f5f5f5;
  margin-top: 50px;
  padding-bottom: 100px;
}

.kumppanit{
	text-align: center;
}

.kumppanit img{
	padding: 20px;
}

